# hacklet-league

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD_ROADMAP.md  CHANGELOG.md  Caddyfile  DATA_MODEL.md  DEPLOY.md  FUZZ_RUNNER_SPEC.md  IDEAS_FOR_LATER.md  JUDGE_PANEL_RECONCILIATION_PATCH.md  LEAGUE_OPERATIONS.md  Makefile  NONTECH_JUDGE_NOTES.md  PITCH.md  TIER_A_OPERATIONS.md  TIER_B_OPERATIONS.md  TIER_C_OPERATIONS.md  claude.md  docker-compose.dev.yml  docker-compose.yml  format_spec.md  log.txt
backend/: .dockerignore  Dockerfile  manage.py  pyproject.toml
backend/chapters/: admin.py  apps.py  models.py  permissions.py  serializers.py  stats.py  tests.py  views.py
backend/events/: admin.py  models.py  permissions.py  serializers.py  tests.py  views.py
backend/hacklet/: asgi.py  urls.py  wsgi.py
backend/newsletter/: tests.py  views.py
backend/rankings/: admin.py  models.py  serializers.py  services.py  tests.py  views.py
backend/rounds/: admin.py  models.py  scoring.py  serializers.py  services.py  tests.py  views.py
backend/users/: admin.py  models.py  serializers.py  tests.py  views.py
fuzz-runner/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
fuzz-runner/hacklet_runner/: __init__.py  aggregate.py  auth.py  browser.py  catalog.py  cli.py  deploy.py  depscan.py  discovery.py  ingest.py  jsmine.py  jsonl.py  net.py  oob.py  openapi.py  perf.py  pipeline.py  probes.py  reportcard.py  schema.py  scope.py  secretscan.py
fuzz-runner/scripts/: deploy_and_grade.py  devpost_repos.py  list_probes.py  parity.py  precision.py  stats.py  (+2 more)
(+248 files in other folders)
