[project]
name = "hacklet"
version = "0.1.0"
description = "HackLet League platform backend"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6",
    "djangorestframework>=3.15",
    "django-environ>=0.11",
    "psycopg[binary]>=3.2",
    "whitenoise>=6.7",
    "gunicorn>=23",
    "django-allauth>=65.3",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "django-stubs>=5",
    "pytest>=8",
    "pytest-django>=4.9",
    "factory-boy>=3.3",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "hacklet.settings.dev"
python_files = ["test_*.py", "*_test.py", "tests.py"]
